// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-btn-group ezd-btn-group-rtl ezd-dropdown-button"
>
  <button
    class="ezd-btn ezd-btn-rtl"
    type="button"
  />
  <button
    class="ezd-btn ezd-btn-icon-only ezd-btn-rtl ezd-dropdown-trigger ezd-dropdown-rtl"
    type="button"
  >
    <span
      aria-label="ellipsis"
      class="anticon anticon-ellipsis"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="ellipsis"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`DropdownButton should support href like Button 1`] = `
<div
  class="ezd-btn-group ezd-dropdown-button"
>
  <a
    class="ezd-btn"
    href="https://saastest3.ys7.com/ezd/"
  />
  <button
    class="ezd-btn ezd-btn-icon-only ezd-dropdown-trigger"
    type="button"
  >
    <span
      aria-label="ellipsis"
      class="anticon anticon-ellipsis"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="ellipsis"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </button>
</div>
`;
